--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:2.5.0'
 
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation group: 'com.google.code.geocoder-java', name: 'geocoder-java', version: '0.15'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
